# uv_demo

./: .gitignore  README.md  main.py  pyproject.toml  sample.ipynb
